# index3ds

./: .travis.yml  Cargo.toml  index3ds-deploy-key.enc
.travis/: deploy.sh
backend/: .env.template  Cargo.toml  send.py
backend/migrations/2019-08-26-152815_init_post_ncch/: down.sql  up.sql
backend/src/: aes.rs  api.rs  data_format.rs  database.rs  key.rs  main.rs  rsa2048.rs  schema.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml
frontend/src/: about.rs  language_map.rs  lib.rs  main.rs  ncch.rs  ncch_list.rs  submit_ncch.rs
frontend/static/: index.css  index.html
httpstub/: .env  Cargo.toml
httpstub/src/: main.rs
