[package]
name = "index3ds"
version = "0.1.0"
authors = ["Weiyi Wang <wwylele@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "1.0", features = ["rust-tls"] }
rustls = "0.15"
actix-files = "0.1"
log = "0.4"
stderrlog = "0.4"
serde = "1.0"
rand = "0.7"
byte_struct = "0.6"
sha2 = "0.8"
aes-ctr = "0.3"
rsa = "0.1"
num-bigint-dig = "0.4"
diesel = { version = "1.4", features = ["postgres", "64-column-tables", "r2d2"] }
dotenv = "0.14"
png = "0.15"
index3ds-common = { path = "../common" }
lazy_static = "1.4"
